fea-rs/test-data/compile-tests/mini-latin/bad/lookup_mixed_rules.fea
# within a named lookup, all rules must have same lookuptype
lookup foo {
    sub f f i by f_f_i;
    sub one by one.osf;
} foo;

